--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "lesson_7",
   "version": "0.1.0",
+  "homepage": "https://upol1.github.io/SHOP_LIAMA",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -26,7 +27,6 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "https://upol1.github.io/SHOP_LIAMA/",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -44,8 +44,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^6.2.0"
   }
 }
